server/.happypack/s-11352328
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token, expected , (88:12)

[0m [90m 86 | [39m        [36mthis[39m[33m.[39mstate [33m=[39m {
 [90m 87 | [39m            news
[31m[1m>[22m[39m[90m 88 | [39m            check[33m:[39m [36mfalse[39m[33m,[39m
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 89 | [39m            inputName[33m:[39m [36mfalse[39m[33m,[39m
 [90m 90 | [39m            inputText[33m:[39m [36mfalse[39m[33m,[39m
 [90m 91 | [39m            buttonDisabled[33m:[39m [36mtrue[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/App/App.js: Unexpected token, expected , (88:12)

[0m [90m 86 | [39m        [36mthis[39m[33m.[39mstate [33m=[39m {
 [90m 87 | [39m            news
[31m[1m>[22m[39m[90m 88 | [39m            check[33m:[39m [36mfalse[39m[33m,[39m
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 89 | [39m            inputName[33m:[39m [36mfalse[39m[33m,[39m
 [90m 90 | [39m            inputText[33m:[39m [36mfalse[39m[33m,[39m
 [90m 91 | [39m            buttonDisabled[33m:[39m [36mtrue[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)